--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ body:not(.home) header #logo img {
   list-style: none;
   margin: 0;
   padding: 0;
-  font-size: 0.7em; /*文字サイズを親要素の70%にする*/
+  font-size: 1.0em; /*文字サイズを親要素の70%にする*/
   position: absolute;
   z-index: 1;
   right: 0px; /*ヘッダーに対して、右からの配置場所の指定*/
@@ -259,7 +259,7 @@ body:not(.home) header #logo img {
   width: 100%; /*ブロックの幅。100%にすれば画面いっぱいに広がります。*/
   height: 100%; /*ブロックの高さ*/
   padding: 120px 20px 20px; /*上、左右、下へのブロック内の余白*/
-  background: #fff; /*背景色*/
+  background: rgb(0, 0, 0); /*背景色*/
   text-align: center; /*テキストを中央に*/
   animation: animation1 0.2s both; /*animation.cssの、animation1を実行する。0.2sは0.2秒の事。*/
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2); /*ボックスの影。右へ、下へ、ぼかし幅の順番。0,0,0は黒の事で0.2は色が20%出た状態。*/
